[S14P21D105-85] test : test noti for cursor base